--- a/main.css
+++ b/main.css
@@ -60,8 +60,7 @@ a {
   color: #fff;
 }
 
-ul,
-menu {
+ul {
   list-style-type: none;
 }
 
@@ -79,5 +78,12 @@ menu {
 }
 
 section {
-  padding: 7.5rem 1.5rem;
+  padding: 7.5rem 1.5rem 8.125rem 1.5rem;
+}
+
+.landing-page {
+  min-width: 375px;
+  background-image: url("images/Illustration-mobile.png");
+  background-repeat: no-repeat;
+  background-position: 100% 215px;
 }
