Load all background images meant for the project div from main.css instead of index.html

--- a/main.css
+++ b/main.css
@@ -171,4 +171,9 @@ input[type=button] {
 
 .project {
   margin: 24px 0 24px 0;
+  background-image: url('images/mask-group.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 327px;
+  height: 385px;
 }
