--- a/main.css
+++ b/main.css
@@ -96,6 +96,7 @@ ul.tech.desk-only {
 }
 
 .container {
+  margin: 0 auto;
   min-width: 375px;
   width: 100%;
 }
@@ -119,6 +120,11 @@ ul.tech.desk-only {
 .inline-hr {
   margin: 24px 0 80px 0;
   color: #212121;
+}
+
+.multi-post {
+  margin: 0 auto;
+  max-width: 327px;
 }
 
 .hype-img {
@@ -196,12 +202,13 @@ button:active {
 }
 
 .project {
-  margin: 24px 0 24px 0;
+  margin: 24px auto;
   background-image: url('images/mask-group.png');
   background-repeat: no-repeat;
   background-size: contain;
   width: 327px;
   height: 385px;
+
 }
 
 .pro-layer {
@@ -238,7 +245,7 @@ button:active {
 }
 
 .abt-line {
-  max-width: 327px;
+  width: 100%;
   margin: 209px 0 130px 0;
 }
 
@@ -247,6 +254,7 @@ button:active {
   flex-direction: column;
   text-align: center;
   max-width: 375px;
+  margin: 0 auto;
 }
 
 .core-skills {
