--- a/main.css
+++ b/main.css
@@ -15,7 +15,18 @@ body {
   width: 100%;
 }
 
-header,
+header {
+  width: 100%;
+  display: flex;
+}
+
+.mob-nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: inherit;
+}
+
 .nav-container {
   font-family: 'Roboto', sans-serif;
   font-weight: 700;
@@ -27,7 +38,6 @@ header,
   background-color: #3e3c3c;
   height: 4.5rem;
   padding: 0.75rem 1.5rem;
-  min-width: 375px;
   width: 100%;
 }
 
@@ -74,17 +84,15 @@ menu {
 .top-link {
   display: flex;
   justify-content: baseline;
+  flex-wrap: wrap;
   gap: 1.3rem;
   padding-top: 1.4rem;
   padding-left: 0.5rem;
-}
-
-section {
-  padding: 7.5rem 1.5rem 8.125rem 1.5rem;
+  width: 100%;
 }
 
 #landing-page {
-  min-width: 375px;
+  width: 100%;
   background-image: url("images/Illustration-mobile.png");
   background-repeat: no-repeat;
   background-position: 100% 215px;
@@ -97,14 +105,13 @@ ul.tech.desk-only {
 
 .container {
   margin: 0 auto;
-  min-width: 375px;
   width: 100%;
+  padding: 7.5rem 1.5rem 8.125rem 1.5rem;
 }
 
 #works-section {
   display: grid;
   background: #fff;
-  min-width: 375px;
   width: 100%;
 }
 
@@ -115,11 +122,13 @@ ul.tech.desk-only {
   color: #1c1a19;
   line-height: 3.25rem;
   text-align: center;
+  width: 100%;
 }
 
 .inline-hr {
   margin: 24px 0 80px 0;
   color: #212121;
+  width: 100%;
 }
 
 .multi-post {
@@ -129,10 +138,13 @@ ul.tech.desk-only {
 
 .hype-img {
   margin: 24px 0 12px 0;
+  width: 100%;
+  height: auto;
 }
 
 .hype-pro {
   color: #091e42;
+  width: 100%;
 }
 
 .sub-pro {
@@ -140,10 +152,12 @@ ul.tech.desk-only {
   font-size: 2rem;
   font-weight: 400;
   line-height: 2.75rem;
+  width: 100%;
 }
 
 .normal {
   max-width: 327px;
+  width: 100%;
   height: auto;
 }
 
@@ -173,13 +187,14 @@ ul.tech.desk-only {
   display: flex;
   margin: 12px 0;
   gap: 12px;
+  width: 100%;
 }
 
 button {
   background-color: #ff6b00;
   border: none;
   padding: 12px 10px;
-  height: 49px;
+  height: 100%;
   width: auto;
   font-family: 'Inter', sans-serif;
   font-weight: 700;
@@ -206,28 +221,32 @@ button:active {
   background-image: url('images/mask-group.png');
   background-repeat: no-repeat;
   background-size: contain;
-  width: 327px;
-  height: 385px;
-
+  max-width: 327px;
+  width: 100%;
+  max-height: 385px;
+  height: auto;
 }
 
 .pro-layer {
   padding: 84px 16px 0 16px;
+  width: 100%;
+  height: auto;
 }
 
 .btn-bg {
   text-align: center;
   background-color: #ff6b00;
   border: none;
-  width: 327px;
-  height: 49px;
+  width: 100%;
+  max-width: 322px;
+  height: auto;
 }
 
 #about-section {
   background-image: url("images/Frame.png");
   background-repeat: no-repeat;
   background-position: 100% 395px;
-  min-width: 375px;
+  width: 100%;
 }
 
 .abt-txt {
@@ -242,6 +261,7 @@ button:active {
 
 #about-section .normal {
   margin-bottom: 24px;
+  width: 100%;
 }
 
 .abt-line {
@@ -271,32 +291,34 @@ button:active {
 div > .lg-skill::before {
   content: url("images/cube.png");
   position: absolute;
-  left: 4rem;
+  left: 3.2rem;
 }
 
 div > .libraries::before {
   content: url("images/Rectangle.png");
   position: absolute;
-  left: 3.25rem;
+  left: 2.5rem;
 }
 
 div > .tools::before {
   content: url("images/circle.png");
   position: absolute;
-  left: 6.5rem;
+  left: 5.5rem;
 }
 
 #contact-section {
   background-color: #fff;
+  padding-top: 120px;
   padding-bottom: 8px;
 }
 
 .contact-form {
   display: flex;
   flex-direction: column;
-  max-width: 327px;
+  max-width: 375px;
   margin: 0 auto;
   text-align: center;
+  padding: 0 24px;
 }
 
 .normal.form-para {
@@ -310,7 +332,6 @@ div > .tools::before {
 
 .mob-form {
   margin-top: 73px;
-  border-bottom: 1px solid #dfe1e6;
   padding-bottom: 124px;
 }
 
@@ -366,4 +387,18 @@ hr.form-line {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
+}
+
+.social-link-lp.footerlink ul {
+  justify-content: center;
+  align-items: center;
+}
+
+#br {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  min-width: 375px;
+  color: #dfe1e6;
 }
