--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,7 @@ body {
 header {
   width: 100%;
   display: flex;
+  background-color: #3e3c3c;
 }
 
 .mob-nav {
@@ -36,7 +37,6 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #3e3c3c;
   height: 4.5rem;
   padding: 0.75rem 1.5rem;
   width: 100%;
@@ -111,8 +111,11 @@ ul.tech.desk-only {
 }
 
 #works-section {
-  display: grid;
   background: #fff;
+  width: 100%;
+}
+
+div.container .works-top {
   width: 100%;
 }
 
@@ -138,11 +141,12 @@ section.sect-container {
 
 .multi-post {
   margin: 0 auto;
-  max-width: 327px;
+  width: 327px;
+  height: 570px;
 }
 
 .hype-img {
-  margin: 24px 0 12px 0;
+  margin-bottom: 12px;
   width: 100%;
   height: auto;
 }
@@ -161,9 +165,7 @@ section.sect-container {
 }
 
 .normal {
-  max-width: 327px;
   width: 100%;
-  height: auto;
 }
 
 .tech li {
@@ -228,7 +230,7 @@ button:active {
   background-size: contain;
   max-width: 327px;
   width: 100%;
-  max-height: 385px;
+  max-height: 386px;
   height: auto;
 }
 
@@ -267,6 +269,7 @@ button:active {
 #about-section .normal {
   margin-bottom: 24px;
   width: 100%;
+  height: 148px;
 }
 
 .abt-line {
@@ -278,7 +281,7 @@ button:active {
   display: flex;
   flex-direction: column;
   text-align: center;
-  max-width: 375px;
+  min-width: 375px;
   margin: 0 auto;
 }
 
@@ -320,7 +323,7 @@ div > .tools::before {
 .contact-form {
   display: flex;
   flex-direction: column;
-  max-width: 375px;
+  width: 100%;
   margin: 0 auto;
   text-align: center;
   padding: 0 24px;
@@ -335,7 +338,7 @@ div > .tools::before {
   text-align: center;
 }
 
-.mob-form {
+form {
   margin-top: 73px;
   padding-bottom: 124px;
 }
@@ -356,12 +359,7 @@ textarea {
   border: none;
 }
 
-input {
-  color: #979493;
-  max-width: 295px;
-}
-
-textarea#textarea-mobile {
+textarea {
   margin: 14px 0;
   height: 114px;
   padding: 12px;
