--- a/css/queries.css
+++ b/css/queries.css
@@ -71,12 +71,12 @@
 
   #works-section > div.container {
     display: grid;
-    grid-template-areas: 
-          "top top"
-          "hype hype"
-          "one two"
-          "three four"
-          "five six";
+    grid-template-areas:
+      "top top"
+      "hype hype"
+      "one two"
+      "three four"
+      "five six";
     background: #fff;
     gap: 24px;
   }
@@ -243,7 +243,7 @@
   }
 
   div > .tools::before {
-    left: -.15rem;
+    left: -0.15rem;
   }
 
   #contact-section {
@@ -255,12 +255,12 @@
   .contact-form {
     flex-direction: row;
     width: 90%;
-    margin:  0 auto;
+    margin: 0 auto;
   }
 
   input[type=text],
   input[type=email] {
-   border-bottom: 1px solid #dbd8d7;
+    border-bottom: 1px solid #dbd8d7;
   }
 
   input,
@@ -271,7 +271,7 @@
 
   form#lg-screen {
     display: inline;
-    margin-top: 0; 
+    margin-top: 0;
   }
 
   .desk-only textarea {
@@ -289,7 +289,7 @@
 
   .project.one {
     grid-area: one;
-  } 
+  }
 
   .project.two {
     grid-area: two;
@@ -351,11 +351,11 @@
   }
 
   #works-section > div.container {
-    grid-template-areas: 
-          "top top top"
-          "hype hype hype"
-          "one two three"
-          "four five six";
+    grid-template-areas:
+      "top top top"
+      "hype hype hype"
+      "one two three"
+      "four five six";
   }
 
   div.multi-post .hype-container {
