--- a/css/main.css
+++ b/css/main.css
@@ -83,6 +83,7 @@ menu {
 }
 
 .top-link {
+  position: relative;
   display: flex;
   justify-content: baseline;
   flex-wrap: wrap;
@@ -90,6 +91,21 @@ menu {
   padding-top: 1.4rem;
   padding-left: 0.5rem;
   width: 100%;
+}
+
+.d-link {
+  display: none;
+  position: relative;
+  top: -32px;
+  left: -50px;
+  border: 2px solid #e05304;
+  background-color: #3c3a39;
+  font-size: 0.8rem;
+  padding: 3px;
+  border-radius: 10px;
+  color: #fff;
+  margin-left: 5px;
+  font-weight: 400;
 }
 
 #landing-page {
