--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,7 @@ header {
 
 .nav-container {
   font-family: 'Roboto', sans-serif;
+  position: relative;
   font-weight: 700;
   font-size: 1rem;
   line-height: 1.5rem;
@@ -70,6 +71,38 @@ header {
 
 .desktop-nav {
   display: none;
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+  background-color: #3e3c3c;
+  color: #fff5e1;
+  top: 0;
+  right: 0;
+  padding: 0.75rem 1.5rem;
+  z-index: 10;
+}
+
+.menu-btn {
+  display: block;
+}
+
+.close-nav {
+  margin-top: 1rem;
+}
+
+.pad-link {
+  display: block;
+  padding-top: 2.5rem;
+  font-size: 1.8rem;
+}
+
+.nav-link {
+  margin-top: 1.5rem;
+}
+
+.nav-hr {
+  margin-top: 1rem;
+  border: 1px solid #6f6c6b;
 }
 
 a {
