--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ body {
 header {
   width: 100%;
   display: flex;
-  background-color: #3e3c3c;
+  background-color: #3c3a39;
 }
 
 .mob-nav {
@@ -34,6 +34,7 @@ header {
   position: relative;
   font-weight: 700;
   font-size: 1rem;
+  background-color: inherit;
   line-height: 1.5rem;
   display: flex;
   justify-content: space-between;
@@ -74,7 +75,7 @@ header {
   position: absolute;
   height: 100vh;
   width: 100%;
-  background-color: #3e3c3c;
+  background-color: inherit;
   color: #fff5e1;
   top: 0;
   right: 0;
@@ -89,7 +90,9 @@ header {
 
 .close-nav {
   position: relative;
-  left: 95%;
+  height: 12px;
+  width: 12px;
+  left: 97%;
   margin-top: 1rem;
 }
 
@@ -97,7 +100,9 @@ header {
   display: block;
   padding-top: 2.5rem;
   padding-left: 1rem;
-  font-size: 1.5rem;
+  font-weight: 700;
+  font-size: 2rem;
+  color: #fff5e1;
 }
 
 .nav-link {
@@ -122,7 +127,6 @@ menu {
 .top-link {
   position: relative;
   display: flex;
-  justify-content: baseline;
   flex-wrap: wrap;
   gap: 1.3rem;
   padding-top: 1.4rem;
