--- a/css/queries.css
+++ b/css/queries.css
@@ -107,7 +107,7 @@
     width: 90%;
   }
 
-  #works-section > div.container {
+  #works-section {
     background: #fff;
   }
 
@@ -218,7 +218,7 @@
   }
 
   .pro-layer {
-    padding: 178px 16px 14px 16px;
+    padding: 178px 0 14px 16px;
     width: 100%;
     height: auto;
     background: linear-gradient(179.35deg, rgba(38, 38, 38, 0) 0.85%, rgba(38, 38, 38, 0.9) 84%);
