--- a/css/main.css
+++ b/css/main.css
@@ -188,6 +188,7 @@ div.container .works-top {
 
 section.sect-container {
   padding: 7.5rem 1.5rem 8.125rem 1.5rem;
+  position: relative;
 }
 
 .inline-hr {
@@ -459,4 +460,13 @@ hr#br {
   margin: 0;
   padding: 0;
   color: #dfe1e6;
+}
+
+/* Styling for Modal Menu */
+
+.pop {
+  position: absolute;
+  display: block;
+  z-index: 1000;
+  background-color: #3c3a39;
 }
