--- a/css/main.css
+++ b/css/main.css
@@ -476,7 +476,7 @@ hr#br {
   padding: 0 1rem;
   height: 850px;
   margin: 0 auto;
-  backdrop-filter: blur(0.5);
+  backdrop-filter: blur(5px);
   background-color: rgba(22, 19, 19, 0.9);
   overflow: auto;
 }
