--- a/css/queries.css
+++ b/css/queries.css
@@ -469,3 +469,56 @@
     margin-left: 16px;
   }
 }
+
+/* Modal Styling */
+.modal-ctn {
+  margin: 5% auto;
+  padding: 2rem 1.5rem 1.85rem 1.5rem;
+  width: 80%;
+  height: 80%;
+}
+
+.title-one {
+  font-family: 'Crete round', sans-serif;
+  font-weight: 400;
+}
+.pivot-ctn {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  color: #344563;
+  height: 80%;
+  gap: 25px;
+}
+
+.modal-skills {
+  margin-top: 12px;
+  margin-bottom: 20px;
+}
+
+.project-snapshot {
+  width: 180%;
+  height: auto;
+  margin: 0.8rem 0 1.5rem 0;
+}
+
+.grp-textsBtn {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  max-height: 448px;
+}
+
+.button-grp {
+  margin-top: 0;
+  justify-content: flex-start;
+  gap: 12px;
+}
+
+/* .modal-texts {
+  max-height: 336px;
+  width: 100%;
+  overflow: hidden;
+  line-height: 30px;
+} */
